<resources>
    <string name="app_name">CheckList App</string>
    <string name="enter_title">Enter Title</string>
    <string name="set">Set</string>
    <string name="enter_item">Enter Item</string>
    <string name="add">Add</string>
    <string name="item_name">item Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="Adding_item">TODO</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="cancel">cancel</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>